# QNNPACK

./: .clang-format  .travis.yml  CMakeLists.txt  README.md  configure.py
bench/: add.cc  average-pooling.cc  channel-shuffle.cc  classification.cc  convolution.cc  global-average-pooling.cc  hgemm.cc  max-pooling.cc  q8gemm.cc  requantization.cc  sgemm.cc  sigmoid.cc  softargmax.cc
cmake/: DownloadCpuinfo.cmake  DownloadFP16.cmake  DownloadFXdiv.cmake  DownloadGoogleBenchmark.cmake  DownloadPSimd.cmake  DownloadPThreadPool.cmake
include/: qnnpack.h
jni/: Android.mk  Application.mk
scripts/: build-android-arm64.sh  build-android-armv7.sh  build-android-x86.sh  build-ios-arm64.sh  build-ios-arm64e.sh  build-ios-armv7.sh  build-ios-armv7s.sh  build-ios-i386.sh  build-ios-x86_64.sh  build-local.sh
src/: add.c  average-pooling.c  channel-shuffle.c  clamp.c  convolution.c  deconvolution.c  fully-connected.c  global-average-pooling.c  indirection.c  init.c  leaky-relu.c  max-pooling.c  operator-delete.c  operator-run.c  sigmoid.c  softargmax.c
src/hgemm/: 8x8-aarch32-neonfp16arith.S  8x8-neonfp16arith.c
src/q8add/: neon.c  sse2.c
src/q8avgpool/: mp8x9p8q-neon.c  mp8x9p8q-sse2.c  up8x9-neon.c  up8x9-sse2.c  up8xm-neon.c  up8xm-sse2.c
src/q8conv/: 4x4c2-sse2.c  4x8-aarch32-neon.S  4x8-neon.c  8x8-aarch64-neon.S  8x8-neon.c
src/q8dw/: 25c8-neon.c  9c8-aarch32-neon.S  9c8-neon.c  9c8-sse2.c
src/q8dwconv/: mp8x25-neon.c  mp8x25-sse2.c  up8x9-aarch32-neon.S  up8x9-neon.c  up8x9-sse2.c
src/q8gavgpool/: mp8x7-neon.c  mp8x7-sse2.c  mp8x7p7q-neon.c  mp8x7p7q-sse2.c  up8x7-neon.c  up8x7-sse2.c  up8xm-neon.c  up8xm-sse2.c
src/q8gemm/: 2x4c8-sse2.c  4x-sumrows-neon.c  4x4c2-sse2.c  4x8-aarch32-neon-per-channel-16bitAcc.S  4x8-aarch32-neon-per-channel.S  4x8-aarch32-neon.S  4x8-neon.c  4x8-neon_per_channel.c  4x8-neon_per_channel_16bitAcc.c  4x8c2-xzp-aarch32-neon.S  4x8c2-xzp-neon.c  6x4-neon.c  8x8-aarch64-neon.S  8x8-neon.c
src/q8mpdw/: 25c8-neon.c  25c8-sse2.c
src/q8updw/: 9c8-aarch32-neon.S  9c8-neon.c  9c8-sse2.c
src/q8vadd/: neon.c  sse2.c
src/qnnpack/: assembly.h  common.h  convolution.h  hgemm.h  indirection.h  isa-checks.h  log.h  math.h  operator.h  pack.h  params.h  q8add.h  q8avgpool.h  q8conv.h  q8dw.h  q8dwconv.h  q8gavgpool.h  q8gemm.h  q8quantize.h  q8vadd.h  requantization-stubs.h  requantization.h  scalar-utils.h  sconv.h  sdwconv.h  sgemm.h  u8clamp.h  u8lut32norm.h  u8maxpool.h  u8rmax.h  x8lut.h  x8zip.h
src/requantization/: fp32-neon.c  fp32-psimd.c  fp32-scalar.c  fp32-sse2.c  gemmlowp-neon.c  gemmlowp-scalar.c  gemmlowp-scalar.h  gemmlowp-sse.h  gemmlowp-sse2.c  gemmlowp-sse4.c  gemmlowp-ssse3.c  precise-neon.c  precise-psimd.c  precise-scalar.c  precise-sse2.c  precise-sse4.c  precise-ssse3.c  q31-neon.c  q31-scalar.c  q31-sse2.c  q31-sse4.c  q31-ssse3.c  runtime-assembly.h  runtime-neon.h  runtime-sse2.h
src/sconv/: 6x8-psimd.c
src/sdwconv/: up4x9-psimd.c
src/sgemm/: 5x8-neon.c  6x8-neon.c  6x8-psimd.c
src/u8clamp/: neon.c  sse2.c
src/u8lut32norm/: scalar.c
src/u8maxpool/: 16x9p8q-neon.c  16x9p8q-sse2.c  sub16-neon.c  sub16-sse2.c
src/u8rmax/: neon.c  sse2.c
src/x8lut/: scalar.c
src/x8zip/: x2-neon.c  x2-sse2.c  x3-neon.c  x3-sse2.c  x4-neon.c  x4-sse2.c  xm-neon.c  xm-sse2.c
test/: add-operator-tester.h  add.cc  average-pooling-operator-tester.h  average-pooling.cc  avgpool-microkernel-tester.h  channel-shuffle-operator-tester.h  channel-shuffle.cc  clamp-microkernel-tester.h  clamp-operator-tester.h  clamp.cc  convolution-operator-tester.h  convolution-tester.h  convolution.cc  deconvolution-operator-tester.h  deconvolution-tester.h  deconvolution.cc  depthwise-microkernel-tester.h  dwconv-microkernel-tester.h  fully-connected-operator-tester.h  fully-connected-tester.h  fully-connected.cc  gavgpool-microkernel-tester.h  gemm-microkernel-tester.h  gemm-tester.h  global-average-pooling-operator-tester.h  global-average-pooling.cc  hgemm.cc  leaky-relu-operator-tester.h  leaky-relu.cc  lut-microkernel-tester.h  lut-norm-microkernel-tester.h  max-pooling-operator-tester.h  max-pooling.cc  maxpool-microkernel-tester.h  q8avgpool.cc  q8conv.cc  q8dw.cc  q8dwconv.cc  q8gavgpool.cc  q8gemm.cc  (+22 more)
